# gender-bias

./: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
figures/: gender_bias_results.csv  gender_props_results.csv  plots.py  summary.csv
notebooks/: results.ipynb  uebung0_empty.ipynb  uebung1.ipynb
reports/: ABOUT.txt
src/: anfang.py  bias_ratio.py  bias_ratio_and_fisher.py  create_metadata.py  gender_utils.py  metadata.py  pi_mc.py  prompt.py  prompt_sim.py  prompts_and_simulation.py  rng_checks.py  simulation-erste-version.py  std_ci.py  tests.py
test/: rng_checks.py  test_parse_gender.py
